minor change. going to change branches

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -19,12 +19,12 @@
 
 </div>
 <div class="row justify-content-md-center">
-   
+
         <div class="col-1"></div>
         <div class="col-1"><img class="dot" id="c1" src="" alt=""></div>
         <div class="col-1"><img class="dot" id="c2" src="" alt=""></div>
         <div class="col-1"><img class="dot" id="c3" src="" alt=""></div>
-        <div class="col-1"><img class="dot" id="c4" src="assets/home/ramin.JPG" alt=""></div>
+        <div class="col-1"><img class="dot" id="c4" src="../../../assets/home/ramin.JPG" alt=""></div>
 
 
     <div class="col"></div>
@@ -45,7 +45,7 @@
     <div class="col-1"><a href=""><i id="git2" class="bi bi-github"  alt=""></i></a><a href=""><i id="lin2"  alt=""></i></a></div>
     <div class="col-1"><a href=""><i id="git3" class="bi bi-github"  alt=""></i></a><a href=""><i id="lin3"  alt=""></i></a></div>
     <div class="col-1"><a href=""><i id="git4" class="bi bi-github"  alt=""></i></a><a href=""><i id="lin4"  alt=""></i></a></div>
-    
+
     <div class="col"></div>
 
 </div>
