--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,11 +5,11 @@
      <p class="lead font-weight-normal" style="padding-top:20px ;">Let's Start</p>
      <a class="btn btn-outline-secondary text-center" style="padding-top:20px; position: relative;"
           href="/create-survey">Create a Survey!</a>
-     <img src="assets/home/dashboards.png" style="position: absolute;
+     <img src="../../../assets/home/dashboards.png" style="position: absolute;
             width: 281px;
             height: 221px;
             margin: 0 100px 100px 100px;" alt="dashboard">
-     <img src="assets/home/bullhorn.png" alt="girl with bullhorn" style="position: absolute;
+     <img src="../../../assets/home/bullhorn.png" alt="girl with bullhorn" style="position: absolute;
               width: 171px;
               height: 199px;
               margin: 150px 100px 100px -160px;">
