--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container-fluid">
     <a href="/" class="navbar-brand">
-      <img src="assets/home/404logo.png" alt="Err404">
+      <img src="../../../assets/home/404logo.png" alt="Err404">
     </a>
     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
       <span class="navbar-toggler-icon"></span>
