--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -34,6 +34,10 @@
           <a class="nav-link" href="/survey-results">Survey Results </a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link" href="" (click)="logout()">Logout</a>
+        </li>
+
       </div>
     </div>
   </div>
