--- a/src/app/pages/survey/create-survey/create-survey.component.html
+++ b/src/app/pages/survey/create-survey/create-survey.component.html
@@ -6,17 +6,17 @@
   
   <div class="form-group">
     <label for="surveyName">Survey name</label>
-    <input type="text" class="form-control" id="surveyName" placeholder="Survey name" required formControlName="surveyName">
+    <input type="text" class="form-control" id="surveyName" placeholder="Survey name" formControlName="surveyName">
   </div>
 
   <div class="form-group">
     <label for="startDate">Start Date</label>
-    <input type="date" class="form-control" id="startDate" placeholder="Start Date" required formControlName="startDate">
+    <input type="date" class="form-control" id="startDate" placeholder="Start Date" formControlName="startDate">
   </div>
 
   <div class="form-group">
     <label for="endDate">End Date</label>
-    <input type="date" class="form-control" id="endDate" placeholder="End Date" required formControlName="endDate">
+    <input type="date" class="form-control" id="endDate" placeholder="End Date" formControlName="endDate">
   </div>  
 
   <ng-container formArrayName="questions">
