--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,19 +1,48 @@
-<div class="col-md-6 p-lg-5 mx-auto testClass">
-     <h1 class="display-5 font-weight-normal">Hello!</h1>
 
-     <p class="lead font-weight-normal">If you want to create a survey, you are in the right place.</p>
-     <p class="lead font-weight-normal" style="padding-top:20px ;">Let's Start</p>
-     <a class="btn btn-outline-secondary text-center" style="padding-top:20px; position: relative;"
-          href="/create-survey">Create a Survey!</a>
-     <img src="../../../assets/home/dashboards.png" style="position: absolute;
-            width: 281px;
-            height: 221px;
-            margin: 0 100px 100px 100px;" alt="dashboard">
-     <img src="../../../assets/home/bullhorn.png" alt="girl with bullhorn" style="position: absolute;
-              width: 171px;
-              height: 199px;
-              margin: 150px 100px 100px -160px;">
+<div class="col-md-6 p-lg-5 mx-auto testClass">
+  <h1 class="display-5 font-weight-normal">Hello!</h1>
+
+  <p class="lead font-weight-normal">If you want to create a survey, you are in the right place.</p>
+  <p class="lead font-weight-normal" style="padding-top:20px ;">Let's Start</p>
+  <a class="btn btn-outline-secondary text-center" style="padding-top:20px; position: relative;"
+       href="/create-survey">Create a Survey!</a>
+  <img src="assets/home/dashboards.png" style="position: absolute;
+         width: 281px;
+         height: 221px;
+         margin: 0 100px 100px 100px;" alt="dashboard">
+  <img src="assets/home/bullhorn.png" alt="girl with bullhorn" style="position: absolute;
+           width: 171px;
+           height: 199px;
+           margin: 150px 100px 100px -160px;">
 
 
 </div>
-<app-list-survey></app-list-survey>
+
+<div class="row">
+<div class="col-md-6">
+  <h1 class="display-5 font-weight-normal mr-10" id="survey">Survey List</h1>
+</div>
+</div>
+<div class="row">
+  <div class="col-xs-6 col-xs-offset-2">
+
+    <form >
+
+
+      <div class="form-group">
+        <span id="survey-list" class="border border-warning border-2 rounded-pill-0">
+          <div class="col-75 "><input type="text" class="form-control form-rounded" placeholder="Survey Name"><span
+            class="glyphicon glyphicon-search"></span></div>
+          <div class="col-75"><input type="text" class="form-control form-rounded" placeholder="Survey Name"></div>
+          <div class="col-75 " ><input type="text" class="form-control form-rounded" placeholder="Survey Name"></div>
+          <div class="col-75"><input type="text" class="form-control form-rounded" placeholder="Survey Name"></div>
+          <div class="col-75 "><input type="text" class="form-control form-rounded" placeholder="Survey Name"></div>
+
+
+        </span>
+
+      </div>
+    </form>
+</div>
+</div>
+
