--- a/src/app/admin/register/register.component.html
+++ b/src/app/admin/register/register.component.html
@@ -1,20 +1,53 @@
-<div class="container">
-  <form class="form-signin">
-      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-3"></div>
+    <div class="col-3"></div>
 
-      <label for="username" class="sr-only">Username</label>
-      <input type="text" name="username" id="username" [(ngModel)]="username" class="form-control" placeholder="Username" required autofocus>
+      <div class="col-xs-6 col-xs-offset-3">
+          <p id="create-account">Create Account</p>
+      </div>
+      <div class="col-3"></div>
+  </div>
+<div class="row">
+  <div class="col-xs-8 col-xs-offset-3">
+    <form class="form-signin">
 
-      <label for="password" class="sr-only">Password</label>
-      <input type="password" name="password" id="password" [(ngModel)]="password" class="form-control" placeholder="Password" required>
-
+      <label for="username" class="sr-only">Name</label>
+      <input type="text" name="username" id="username" [(ngModel)]="username" class="form-control" placeholder="Name" required autofocus>
       <label for="email" class="sr-only">Email</label>
       <input type="email" name="email" id="email" [(ngModel)]="email" class="form-control" placeholder="Email" required>
+      <label for="password" class="sr-only">Password</label>
+      <input type="password" name="password" id="password" [(ngModel)]="password" class="form-control" placeholder="Password" required>
+      <label for="password" class="sr-only">Confirm Password</label>
+      <input type="password" name="password" id="password" [(ngModel)]="password" class="form-control" placeholder="Confirm Password" required>
+
 
       <label for="displayName" class="sr-only">Display Name</label>
       <input type="text" name="displayName" id="displayName" [(ngModel)]="displayName" class="form-control" placeholder="Display Name" required>
 
-      <button class="btn btn-lg btn-primary btn-block" (click)="register()" type="button">Register</button>
-      <button class="btn btn-lg btn-primary btn-block" type="button">Back</button>
+      <button class="btn btn-lg btn-primary btn-block mb-7" (click)="register()" type="button">Create</button>
   </form>
 </div>
+<div class="col"></div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
