--- a/src/app/pages/survey/list-survey/list-survey.component.css
+++ b/src/app/pages/survey/list-survey/list-survey.component.css
@@ -17,3 +17,112 @@ button a{
 .respond{
     background: rgb(42, 42, 44);
 }
+/* -----------------------
+  Form
+----------------------- */
+.form-control {
+  border-radius: 0;
+
+}
+.form-control:focus {
+  box-shadow: none;
+}
+.form-group {
+    position: absolute;
+    left: 380px;
+    top: 200px;
+
+}
+
+.form-group > input {
+  width: 330%;
+
+
+}
+
+/*------------------------------
+	Form
+------------------------------*/
+.form-control {
+  position: relative;
+width: 886px ;
+height: 58px ;
+left: 30px;
+top: 5px;
+margin-bottom: 10px;
+color: #FFFFFF;
+box-shadow: 0px 1px 4px rgba(241, 238, 238, 0.25);
+border-radius: 22px;
+
+}
+.form-control,
+.form-control:focus,
+.form-control:focus:hover {
+  color: black;
+
+  background: white;
+  outline: none;
+}
+.form-control:focus,
+.form-control:focus:hover {
+  border-bottom: 1px solid #ff8d00;
+  border-top: 1px solid #ff8d00;
+  border-left: 1px solid #ff8d00;
+  border-right: 1px solid #ff8d00;
+}
+.btn-survey{
+  position: absolute;
+width: 353px;
+height: 66px;
+left: 901px;
+top: 131px;
+background: #771711;
+color: #F7EEEA;
+box-shadow: 0px 1px 4px rgb(255, 251, 251);
+border-radius: 22px;
+}
+h2{
+  position: absolute;
+  width: 237px;
+  height: 55px;
+  left: 320px;
+  top: 124px;
+
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 55px;
+  /* identical to box height */
+
+  letter-spacing: 0.05em;
+
+  color: #771711;
+}
+
+.border{
+position: initial;
+  display: block;
+width: 937px ;
+height:  auto;
+left: 102px;
+top: 250px;
+
+background: #F5BDA6;
+box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+border-radius: 22px;
+}
+
+
+#survey-list{
+  position: absolute;
+width: 937px;
+height: auto;
+left: -60px;
+top: 50px;
+background: #F5BDA6;
+box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+border-radius: 22px;
+}
+
+
