Improvements to the survey pages

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -23,7 +23,7 @@
         <div class="col-1"></div>
         <div class="col-1"><img class="dot" id="c1" src="" alt=""></div>
         <div class="col-1"><img class="dot" id="c2" src="" alt=""></div>
-        <div class="col-1"><img class="dot" id="c3" src="" alt=""></div>
+        <div class="col-1"><img class="dot" id="c3" src="../../../assets/home/phelipe.jpg" alt=""></div>
         <div class="col-1"><img class="dot" id="c4" src="../../../assets/home/ramin.JPG" alt=""></div>
 
 
