--- a/src/app/pages/survey/list-survey/list-survey.component.html
+++ b/src/app/pages/survey/list-survey/list-survey.component.html
@@ -3,13 +3,11 @@
 
 <div class="col-md-6 p-lg-5 mx-auto my-5">
   <br/><br/>
-  <h4 style="text-align: center;">Survey List</h4>
+  <h4 style="text-align: center;">My Surveys</h4>
   <ul class="list-group">
     <tr *ngFor="let survey of surveyList">
       <td class="list-group-item">
         {{ survey.surveyName }}
-        <button type="button" class="respond" *ngIf="isAvailable(survey)"><a href="#" [routerLink]="['/respond-survey/', survey._id]">Respond</a></button>
-
         <button type="button" *ngIf="authService.isAuthenticated()" class="delete" (click)="deleteSurvey(survey._id)">Delete</button>
         <button type="button" *ngIf="authService.isAuthenticated()" class="edit" ><a href="#" [routerLink]="['/update-survey/', survey._id]">Edit</a></button>
       </td>
