--- a/src/app/pages/survey/update-survey/update-survey.component.html
+++ b/src/app/pages/survey/update-survey/update-survey.component.html
@@ -25,6 +25,11 @@
     <input type="date" class="form-control" id="lastModification" required formControlName="lastModification" readonly>
   </div> 
 
+  <div class="form-group">
+    <label for="lastModification">Last Modification</label>
+    <input type="hidden" class="form-control" id="owner" required formControlName="owner">
+  </div> 
+
   <ng-container formArrayName="questions">
     <ng-container  *ngFor="let questionForm of questions.controls; let i = index;">
       <div [formGroup]="questionForm" >
