about me minor changes

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -26,6 +26,8 @@
           <h5 class="card-title">Bruna Donatoni</h5>
           <p class="card-text">301199383</p>
           <p class="card-text">Team Leader</p>
+          <a href=""><i class="fa-brands fa-github fa-xl"></i></a>
+          <a href=""><i class="fa-brands fa-linkedin fa-xl"></i></a>
         </div>
       </div>
     </div>
@@ -38,6 +40,8 @@
             <h5 class="card-title">Phelipe da Silva</h5>
             <p class="card-text">301233605</p>
             <p class="card-text">Tech Leader</p>
+            <a href=""><i class="fa-brands fa-github fa-xl"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin fa-xl"></i></a>
           </div>
         </div>
       </div>
@@ -50,6 +54,8 @@
           <h5 class="card-title">Eduardo Missono</h5>
           <p class="card-text">301200673</p>
           <p class="card-text">Dev Subordinate</p>
+          <a href=""><i class="fa-brands fa-github fa-xl"></i></a>
+          <a href=""><i class="fa-brands fa-linkedin fa-xl"></i></a>
         </div>
       </div>
     </div>
@@ -61,6 +67,8 @@
           <h5 class="card-title">Ramin Beiramzadegan</h5>
           <p class="card-text">301254240</p>
           <p class="card-text">Team Designer</p>
+          <a href=""><i class="fa-brands fa-github fa-xl"></i></a>
+          <a href=""><i class="fa-brands fa-linkedin fa-xl"></i></a>
         </div>
       </div>
     </div>
