home page and navbar updated

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -15,7 +15,8 @@
               margin: 150px 100px 100px -160px;">
 </div>
 
-<div *ngIf="authService.isAuthenticated();">
-     <app-list-survey></app-list-survey>
-</div>
+<!--<div *ngIf="authService.isAuthenticated();">-->
+<!--     <app-list-survey></app-list-survey>-->
+<!--</div>-->
+<app-available-surveys></app-available-surveys>
 
