--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -19,7 +19,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/available-surveys">Available Surveys</a>
+          <a class="nav-link" href="/available-surveys">Community Surveys</a>
         </li>
 
         <div *ngIf="!authService.isAuthenticated(); else elseBlock">
