--- a/src/app/pages/survey/available-surveys/available-surveys.component.css
+++ b/src/app/pages/survey/available-surveys/available-surveys.component.css
@@ -1,13 +1,20 @@
 button{
-    font-family:sans-serif;
     color: #F7EEEA;
-    float:inline-end;
     border-radius: 5px;
 }
 button a{
     text-decoration: none;
     color: #F7EEEA;
 }
+
 .respond{
     background: rgb(42, 42, 44);
+}
+
+table {
+  background-color: whitesmoke;
+}
+
+td {
+  padding: 5px;
 }
