--- a/src/app/pages/survey/available-surveys/available-surveys.component.html
+++ b/src/app/pages/survey/available-surveys/available-surveys.component.html
@@ -1,14 +1,15 @@
-<h1>Surveys</h1>
-
 <div class="col-md-6 p-lg-5 mx-auto my-5">
-  <br/><br/>
-  <h4 style="text-align: center;">My Surveys</h4>
-  <ul class="list-group">
+  <h4 style="text-align: center;">Community Surveys</h4>
+  <br/>
+  <table class="table">
     <tr *ngFor="let survey of surveyList">
-      <td class="list-group-item">
+      <td class="col-9">
         {{ survey.surveyName }}
+      </td>
+      <td class="col-3">
         <button type="button" class="respond"><a href="#" [routerLink]="['/respond-survey/', survey._id]">Respond</a></button>
       </td>
     </tr>
-  </ul>
+  </table>
+
 </div>
