available survey minor update and list surveys updated

--- a/src/app/pages/survey/available-surveys/available-surveys.component.css
+++ b/src/app/pages/survey/available-surveys/available-surveys.component.css
@@ -1,14 +1,17 @@
-button{
-    color: #F7EEEA;
-    border-radius: 5px;
+button {
+  border-radius: 5px;
+  width: 43px;
+  float: right;
+  background-color: transparent;
+  border: none;
 }
+
 button a{
-    text-decoration: none;
-    color: #F7EEEA;
+  text-decoration: none;
 }
 
 .respond{
-    background: rgb(42, 42, 44);
+  color: rgb(42, 42, 44);
 }
 
 table {
