--- a/src/app/pages/survey/list-survey/list-survey.component.html
+++ b/src/app/pages/survey/list-survey/list-survey.component.html
@@ -1,16 +1,23 @@
-<h1>Surveys</h1>
-<p>Ramin -> you can work here for the SURVEYS content - Need to creat add CREATE Survey Button</p>
-
-<div class="col-md-6 p-lg-5 mx-auto my-5">
-  <br/><br/>
+<div class="col-md-9 p-lg-5 mx-auto my-5">
   <h4 style="text-align: center;">My Surveys</h4>
-  <ul class="list-group">
+  <br/>
+
+  <table class="table">
     <tr *ngFor="let survey of surveyList">
-      <td class="list-group-item">
+      <td class="col-10">
         {{ survey.surveyName }}
-        <button type="button" *ngIf="authService.isAuthenticated()" class="delete" (click)="deleteSurvey(survey._id)">Delete</button>
-        <button type="button" *ngIf="authService.isAuthenticated()" class="edit" ><a href="#" [routerLink]="['/update-survey/', survey._id]">Edit</a></button>
+      </td>
+      <td class="col-2">
+        <button type="button" *ngIf="authService.isAuthenticated()" class="delete" (click)="deleteSurvey(survey._id)">
+          <i class="fa-solid fa-trash fa-lg"></i>
+        </button>
+
+        <button type="button" *ngIf="authService.isAuthenticated()" class="edit">
+          <a href="#" [routerLink]="['/update-survey/', survey._id]">
+            <i class="fa-solid fa-pen fa-lg"></i>
+          </a>
+        </button>
       </td>
     </tr>
-  </ul>
+  </table>
 </div>
