--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container p-lg-5 text-center">
 
   <div class="col-md-7 p-lg-3 mx-auto">
     <p id="p">
