update survey updated

--- a/src/app/pages/survey/available-surveys/available-surveys.component.html
+++ b/src/app/pages/survey/available-surveys/available-surveys.component.html
@@ -10,7 +10,7 @@
       <td class="col-1">
         <button type="button">
           <a href="#" [routerLink]="['/respond-survey/', survey._id]">
-            <i class="fa-solid fa-reply respond"></i>
+            <i class="fa-solid fa-magnifying-glass fa-lg respond"></i>
           </a>
         </button>
       </td>
