--- a/src/app/pages/survey/create-survey/create-survey.component.html
+++ b/src/app/pages/survey/create-survey/create-survey.component.html
@@ -63,7 +63,7 @@
 
       <div class="text-center">
         <button type="submit" class="btn btn-primary createBtn" id="submit" (click)="createSurvey(survey.value)">
-          <i class="fa-solid fa-floppy-disk"></i> &nbsp;Create survey
+          <i class="fa-solid fa-floppy-disk fa-2xl"></i> &nbsp;Create survey
         </button>
       </div>
     </form>
