--- a/src/app/pages/survey/update-survey/update-survey.component.css
+++ b/src/app/pages/survey/update-survey/update-survey.component.css
@@ -1,3 +1,31 @@
-form {
-    margin-bottom: 100px;
+.btn{
+  color: #F7EEEA;
+  background: #771711;
+  border: none;
+}
+
+.addQuestion {
+  float: right;
+}
+
+.updateBtn {
+  margin-top: 20px;
+  width: 169px;
+  height: 68px;
+}
+
+.lastModification {
+  margin-top: 10px;
+  border-color: #771711;
+  border-width: 2px;
+  margin-bottom: 10px;
+  padding: 10px 20px;
+}
+
+select {
+  margin-bottom: 10px;
+}
+
+input {
+  margin-bottom: 10px;
 }
