--- a/src/app/pages/survey/survey-results/survey-results.component.css
+++ b/src/app/pages/survey/survey-results/survey-results.component.css
@@ -1,10 +1,28 @@
 button{
-    font-family:sans-serif;
-    color: #F7EEEA;
-    border-radius: 5px;
-    background: rgb(42, 42, 44);
+  border-radius: 5px;
+  background: transparent;
+  border: none;
+  float: right;
 }
+
+i {
+  color: #771711;
+}
+
 button a{
-    text-decoration: none;
-    color: #F7EEEA;
+  text-decoration: none;
+  color: #F7EEEA;
+}
+
+.card {
+  display: inline-flex;
+}
+
+.surveyResults {
+  width: 20rem;
+  margin: 5px;
+}
+
+.questionsHeader {
+  background-color: lightgray;
 }
