--- a/src/app/admin/register/register.component.html
+++ b/src/app/admin/register/register.component.html
@@ -1,20 +1,24 @@
-<div class="container">
+<div class="col-md-6 p-lg-3 mx-auto my-5">
+  <h4 style="text-align: center;">Create Your Account</h4>
+  <br/>
+
   <form class="form-signin">
-      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <label for="username" class="sr-only">Username</label>
+    <input type="text" name="username" id="username" [(ngModel)]="username" class="form-control" placeholder="Username" required autofocus>
 
-      <label for="username" class="sr-only">Username</label>
-      <input type="text" name="username" id="username" [(ngModel)]="username" class="form-control" placeholder="Username" required autofocus>
+    <label for="password" class="sr-only">Password</label>
+    <input type="password" name="password" id="password" [(ngModel)]="password" class="form-control" placeholder="Password" required>
 
-      <label for="password" class="sr-only">Password</label>
-      <input type="password" name="password" id="password" [(ngModel)]="password" class="form-control" placeholder="Password" required>
+    <label for="email" class="sr-only">Email</label>
+    <input type="email" name="email" id="email" [(ngModel)]="email" class="form-control" placeholder="Email" required>
 
-      <label for="email" class="sr-only">Email</label>
-      <input type="email" name="email" id="email" [(ngModel)]="email" class="form-control" placeholder="Email" required>
+    <label for="displayName" class="sr-only">Display Name</label>
+    <input type="text" name="displayName" id="displayName" [(ngModel)]="displayName" class="form-control" placeholder="Display Name" required>
 
-      <label for="displayName" class="sr-only">Display Name</label>
-      <input type="text" name="displayName" id="displayName" [(ngModel)]="displayName" class="form-control" placeholder="Display Name" required>
+    <div class="buttons text-center">
+      <button class="btn btn-lg btn-primary btn-block" (click)="register()" type="button">Register</button>&nbsp;&nbsp;
+      <button class="btn btn-lg btn-primary btn-block" (click)="back()" type="button">Back</button>
+    </div>
 
-      <button class="btn btn-lg btn-primary btn-block" (click)="register()" type="button">Register</button>
-      <button class="btn btn-lg btn-primary btn-block" type="button">Back</button>
   </form>
 </div>
