about page updated

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -18,60 +18,48 @@
     </p>
   </div>
 
-  <div class="row">
-    <div class="col-3">
-      <div class="card" style="width: 15rem;">
-        <img class="card-img-top" src="./assets/about/Bruna.jpeg" alt="The Leader">
-        <div class="card-body">
-          <h5 class="card-title">Bruna Donatoni</h5>
-          <p class="card-text">301199383</p>
-          <p class="card-text">Team Leader</p>
-          <a href="https://github.com/Brunalsdd"><i class="fa-brands fa-github fa-xl"></i></a>
-          <a href="https://www.linkedin.com/in/bruna-ducceschi-donatoni-3386406b/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
-        </div>
+    <div class="card groupCard">
+      <img class="card-img-top" src="./assets/about/Bruna.jpeg" alt="The Leader">
+      <div class="card-body">
+        <h5 class="card-title">Bruna Donatoni</h5>
+        <p class="card-text">301199383</p>
+        <p class="card-text">Team Leader</p>
+        <a href="https://github.com/Brunalsdd"><i class="fa-brands fa-github fa-xl"></i></a>
+        <a href="https://www.linkedin.com/in/bruna-ducceschi-donatoni-3386406b/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
       </div>
     </div>
 
-    <div class="col-3">
-      <div class="col-3">
-        <div class="card" style="width: 15rem;">
-          <img class="card-img-top" src="./assets/about/phelipe.jpg" alt="The Boss">
-          <div class="card-body">
-            <h5 class="card-title">Phelipe da Silva</h5>
-            <p class="card-text">301233605</p>
-            <p class="card-text">Tech Leader</p>
-            <a href="https://github.com/phelipems91"><i class="fa-brands fa-github fa-xl"></i></a>
-            <a href="https://www.linkedin.com/in/phelipemsilva/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
-          </div>
-        </div>
+    <div class="card groupCard">
+      <img class="card-img-top" src="./assets/about/phelipe.jpg" alt="The Boss">
+      <div class="card-body">
+        <h5 class="card-title">Phelipe da Silva</h5>
+        <p class="card-text">301233605</p>
+        <p class="card-text">Tech Leader</p>
+        <a href="https://github.com/phelipems91"><i class="fa-brands fa-github fa-xl"></i></a>
+        <a href="https://www.linkedin.com/in/phelipemsilva/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
       </div>
     </div>
 
-    <div class="col-3">
-      <div class="card" style="width: 15rem;">
-        <img class="card-img-top" src="./assets/about/eduardo.jpeg" alt="The Intern">
-        <div class="card-body">
-          <h5 class="card-title">Eduardo Missono</h5>
-          <p class="card-text">301200673</p>
-          <p class="card-text">Dev Intern/Subordinate</p>
-          <a href="https://github.com/dudumissono"><i class="fa-brands fa-github fa-xl"></i></a>
-          <a href="https://www.linkedin.com/in/eduardomissono/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
-        </div>
+    <div class="card groupCard">
+      <img class="card-img-top" src="./assets/about/eduardo.jpeg" alt="The Intern">
+      <div class="card-body">
+        <h5 class="card-title">Eduardo Missono</h5>
+        <p class="card-text">301200673</p>
+        <p class="card-text">Dev Intern/Subordinate</p>
+        <a href="https://github.com/dudumissono"><i class="fa-brands fa-github fa-xl"></i></a>
+        <a href="https://www.linkedin.com/in/eduardomissono/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
       </div>
     </div>
 
-    <div class="col-3">
-      <div class="card" style="width: 15rem;">
-        <img class="card-img-top" src="./assets/about/ramin.JPG" alt="The Designer">
-        <div class="card-body">
-          <h5 class="card-title">Ramin Beiramzadegan</h5>
-          <p class="card-text">301254240</p>
-          <p class="card-text">Team Designer</p>
-          <a href=""><i class="fa-brands fa-github fa-xl"></i></a>
-          <a href=""><i class="fa-brands fa-linkedin fa-xl"></i></a>
-        </div>
+    <div class="card groupCard">
+      <img class="card-img-top" src="./assets/about/ramin.JPG" alt="The Designer">
+      <div class="card-body">
+        <h5 class="card-title">Ramin Beiramzadegan</h5>
+        <p class="card-text">301254240</p>
+        <p class="card-text">Team Designer</p>
+        <a href="https://github.com/raminbeiramzadegan"><i class="fa-brands fa-github fa-xl"></i></a>
+        <a href=""><i class="fa-brands fa-linkedin fa-xl"></i></a>
       </div>
     </div>
 
-  </div>
 </div>
